<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <TextView
        android:id="@+id/bpi_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/bitcoin_price_index"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/updated_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/updated"
        app:layout_constraintEnd_toStartOf="@+id/updated_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bpi_label" />

    <TextView
        android:id="@+id/updated_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        tools:text="09 May, 2022 09:57AM"
        app:layout_constraintStart_toEndOf="@id/updated_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bpi_label" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_currencies"
        tools:listitem="@layout/bpi_layout"
        tools:itemCount="3"
        app:layout_constraintTop_toBottomOf="@id/updated_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_min_limit_label"
        android:layout_marginTop="24dp"
        android:layout_width="0dp"
        android:layout_height="0dp"/>


    <TextView
        app:layout_constraintEnd_toEndOf="@id/tv_min_limit_value"
        app:layout_constraintStart_toStartOf="@id/tv_min_limit_value"
        app:layout_constraintBottom_toTopOf="@id/tv_min_limit_value"
        android:id="@+id/tv_min_limit_label"
        android:text="@string/min_limit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        app:layout_constraintEnd_toEndOf="@id/tv_max_limit_value"
        app:layout_constraintStart_toStartOf="@id/tv_max_limit_value"
        app:layout_constraintBottom_toTopOf="@id/tv_max_limit_value"
        android:id="@+id/tv_max_limit_label"
        android:text="@string/max_limit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        app:layout_constraintBottom_toBottomOf="@id/btn_edit_limits"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_max_limit_value"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="10dp"
        android:id="@+id/tv_min_limit_value"
        tools:text="33021.2356"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        app:layout_constraintStart_toEndOf="@id/tv_min_limit_value"
        app:layout_constraintBottom_toBottomOf="@id/btn_edit_limits"
        app:layout_constraintEnd_toStartOf="@id/btn_edit_limits"
        android:id="@+id/tv_max_limit_value"
        android:layout_marginStart="10dp"
        tools:text="33021.2356"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        style="?android:attr/borderlessButtonStyle"
        app:layout_constraintBottom_toTopOf="@id/tv_disclaimer"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:textColor="@color/black"
        android:text="@string/edit"
        android:id="@+id/btn_edit_limits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <View
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="#ACB4BA"
        app:layout_constraintTop_toBottomOf="@id/btn_edit_limits"
        app:layout_constraintBottom_toTopOf="@id/tv_disclaimer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="0dp"
        android:layout_height="1dp"/>
    <TextView
        tools:text="disclaimer disclaimer disclaimer "
        android:id="@+id/tv_disclaimer"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>


    <ProgressBar
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/pb_network"
        android:layout_width="0dp"
        android:layout_marginTop="4dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:indeterminate="true"
        style="?android:attr/progressBarStyleHorizontal"
       />

</androidx.constraintlayout.widget.ConstraintLayout>